--- a/mnist/01-unregularized.tex
+++ b/mnist/01-unregularized.tex
@@ -1,4 +1,4 @@
-\item \points{12} 
+\item \subquestionpointscoding{12} 
 
 Implement both forward-propagation and back-propagation for the above loss function.
 Initialize the weights of the network by sampling values from a standard normal
