--- a/mnist/02-regularized.tex
+++ b/mnist/02-regularized.tex
@@ -1,4 +1,4 @@
-\item \points{5} Now add a regularization term to your cross entropy loss.
+\item \subquestionpointscoding{5} Now add a regularization term to your cross entropy loss.
 The loss function will become \begin{equation*}
   J_{MB} = \left(\frac{1}{B}\sum_{i=1}^{B}CE(y^{(i)}, \hat{y}^{(i)})\right) + \lambda \left(||W^{[1]}||^2 + ||W^{[2]}||^2 \right)
   \end{equation*}
