--- a/mnist/03-compare.tex
+++ b/mnist/03-compare.tex
@@ -1,4 +1,4 @@
-\item \points{3}
+\item \subquestionpointscodingandwritten{3}
 All this while you should have stayed away from the test data completely. Now that
 you have convinced yourself that the model is working as expected (i.e, the
 observations you made in the previous part matches what you learnt in class
