--- a/spam/02-naive-bayes.tex
+++ b/spam/02-naive-bayes.tex
@@ -1,4 +1,4 @@
-\item \subquestionpoints{5}
+\item \subquestionpointscoding{5}
 In this question you are going to implement a naive Bayes classifier for spam
 classification with {\bf multinomial event model} and Laplace smoothing.
 
