--- a/spam/04-svm.tex
+++ b/spam/04-svm.tex
@@ -1,4 +1,4 @@
-\item \subquestionpoints{5}
+\item \subquestionpointscoding{5}
 Support vector machines (SVMs) are an alternative machine learning model that we discussed in class.
 We have provided you an SVM implementation (using a radial basis function (RBF) kernel) within \texttt{src/spam/svm.py} (You should not need to modify that code).
 
