--- a/00-instructions/02-submission.tex
+++ b/00-instructions/02-submission.tex
@@ -1,6 +1,9 @@
-All students must submit an electronic PDF version of the written questions.  We highly recommend typesetting your solutions via \LaTeX, though it is not required. If you choose to hand write your responses, please make sure they are well organized and legible when scanned. The source \LaTeX for all problem sets is available on github.
+{\bf Submission Instructions} \\~\\
+{\bf Written Submission:}
+All students must submit an electronic PDF version of the written questions. We highly recommend typesetting your solutions via \LaTeX, though it is not required. If you choose to hand write your responses, please make sure they are well organized and legible when scanned. The source \LaTeX for all problem sets is available on GitHub.\\~\\
+{\bf Coding Submission:}
 All students must also submit a zip file of their source code.
-Create a submission using the following bash command (Make sure your conda environment is activated for this to work).:\\\\
-\small{\zipscript}\\\\
-You should make sure to (1) restrict yourself to only using libraries included in the \texttt{environment.yml} file, and (2) make sure your code runs without errors.
-Your submission may be evaluated by the auto-grader using a private test set, or used for verifying the outputs reported in the writeup.
+Create a submission using the following bash command:\\\\
+\small{\zipscript}\\\\ 
+You should make sure to (1) restrict yourself to only using libraries included in the starter code, and (2) make sure your code runs without errors.
+Your submission will be evaluated by the auto-grader using a private test set and will be used for verifying the outputs reported in the writeup.\\~\\~\\
