--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \def\psetnum{4 }
 
 %%% Change the following flag to toggle between questions or solutions
-\ifdefined\solutions {} \else \def\solutions{1} \fi
+\ifdefined\solutions {1} \else \def\solutions{} \fi
 
 \input{macros}
 
