Adding python script to zip coding assignments

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \def\due{Monday, 7 September 2020}
 \def\zipscript{\texttt{zip -j ps4\_submission.zip mnist/src/nn.py spam/src/spam.py}}
+\def\zipscriptalt{\texttt{python zip\_submission.py}}
 \def\psetnum{4 }
 
 %%% Change the following flag to toggle between questions or solutions
