--- a/00-instructions/02-submission.tex
+++ b/00-instructions/02-submission.tex
@@ -5,5 +5,7 @@ All students must submit an electronic PDF version of the written questions. We 
 All students must also submit a zip file of their source code.
 Create a submission using the following bash command:\\\\
 \small{\zipscript}\\\\ 
+If you are \textbf{NOT} able to successfully zip your code using the following bash command or do \textbf{NOT} have the zip command line tool on your machine, please run the following python script to zip your code as an alternative: \\\\
+\small{\zipscriptalt}\\\\
 You should make sure to (1) restrict yourself to only using libraries included in the starter code, and (2) make sure your code runs without errors.
 Your submission will be evaluated by the auto-grader using a private test set and will be used for verifying the outputs reported in the writeup.\\~\\~\\
