--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,10 @@
 \def\due{Monday, 7 September 2020}
 \def\zipscript{\texttt{zip -j ps4\_submission.zip mnist/src/nn.py spam/src/spam.py}}
+\def\zipscriptalt{\texttt{python zip\_submission.py}}
 \def\psetnum{4 }
 
 %%% Change the following flag to toggle between questions or solutions
-\ifdefined\solutions {} \else \def\solutions{1} \fi
+\ifdefined\solutions {1} \else \def\solutions{2} \fi
 
 \input{macros}
 
