--- a/mnist/03-compare.tex
+++ b/mnist/03-compare.tex
@@ -1,4 +1,4 @@
-\item \subquestionpointscodingandwritten{3}
+\item \subquestionpointscoding{2}
 All this while you should have stayed away from the test data completely. Now that
 you have convinced yourself that the model is working as expected (i.e, the
 observations you made in the previous part matches what you learnt in class
@@ -10,10 +10,8 @@ Initialize your model from the parameters saved in part (a) (i.e, the non-regula
 model), and evaluate the model performance on the test data. Repeat this using the
 parameters saved in part (b) (i.e, the regularized model).
 
-Report your test accuracy for both regularized model and non-regularized model.  
-Briefly (in one sentence) explain why this outcome makes sense"
 You should have accuracy close to 0.92870 without regularization, and 0.96760 with regularization.
 Note: these accuracies assume you implement the code with the matrix dimensions as specified in
-the comments, which is not the same way as specified in your code. Even if you do not precisely these
+the comments, which is not the same way as specified in your code. Even if you do not have precisely these
 numbers, you should observe good accuracy and better test accuracy with regularization.
 
