--- a/main.tex
+++ b/main.tex
@@ -5,6 +5,18 @@
 
 %%% Change the following flag to toggle between questions or solutions
 \ifdefined\solutions {1} \else \def\solutions{2} \fi
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%                                                                                         %
+% PLEASE NOTE THAT THIS DOCUMENT AND IT'S SUB-DOCUMENTS MAY REFER TO "*-sol.tex" FILES    %
+% THESE FILES ARE THE SOLUTION FILES CREATED BY THE COURSE STAFF TO FACILITATE COMPILING  %
+% BOTH THE PROBLEM SET AND ITS SOLUTIONS IN THE SAME LATEX FOLDER.  STUDENTS WILL NOT     %
+% GAIN ACCESS TO THESE "*-sol.tex" FILES UNTIL AFTER THE PROBLEM SET DUE DATE.  IF YOU    %
+% ARE RECEIVING ERRORS FROM YOUR LATEX COMPILER ABOUT THESE FILES MISSING, ENSURE THE     %
+% LINES IMMEDIATELY PRECEDING THIS STATEMENT IS EXACTLY AS FOLLOWS:                       %
+%                                                                                         %
+%      \ifdefined\solutions {2} \else \def\solutions{1} \fi                               %
+%                                                                                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{macros}
 
