--- a/mnist/01-unregularized.tex
+++ b/mnist/01-unregularized.tex
@@ -33,5 +33,5 @@ You plots should look similar to the following:
 
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.75]{mnist/src/baseline.pdf}
+    \includegraphics[scale=0.75]{mnist/baseline.pdf}
 \end{figure}
