--- a/mnist/02-regularized.tex
+++ b/mnist/02-regularized.tex
@@ -17,5 +17,5 @@ If you recreate the plots frmo the previous part, they should look similar to th
 
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.75]{mnist/src/regularized.pdf}
+    \includegraphics[scale=0.75]{mnist/regularized.pdf}
 \end{figure}
