Change file structure and corrected errors in the Latex.

--- a/spam/00-main.tex
+++ b/spam/00-main.tex
@@ -1,6 +1,6 @@
 \item \points{20} {\bf Spam classification}
 
-In this problem, we will use the naive Bayes algorithm and an SVM to
+In this problem, we will use the Naive Bayes algorithm and an SVM to
 build a spam classifier.
 
 In recent years, spam on electronic media has been a growing concern.  Here, we'll build a classifier to distinguish
