--- a/spam/03-five-best.tex
+++ b/spam/03-five-best.tex
@@ -8,6 +8,4 @@ token $i$ is for the SPAM class by looking at:
     {P(\hbox{token $i$} | \hbox{email is NOTSPAM})}\right).
 \end{equation*}
 
-Complete the \texttt{get\_top\_five\_naive\_bayes\_words} function within the provided code using the above formula in order to obtain the 5 most indicative tokens.
-
-Report the top five words in your writeup.\\[50pt]
+Complete the \texttt{get\_top\_five\_naive\_bayes\_words} function within the provided code using the above formula in order to obtain the 5 most indicative tokens.\\[50pt]
