--- a/spam/04-svm.tex
+++ b/spam/04-svm.tex
@@ -4,4 +4,4 @@ We have provided you an SVM implementation (using a radial basis function (RBF) 
 
 One important part of training an SVM parameterized by an RBF kernel (a.k.a Gaussian kernel) is choosing an appropriate kernel radius parameter.
 
-Complete the \texttt{compute\_best\_svm\_radius} by writing code to compute the best SVM radius which maximizes accuracy on the validation dataset. Report the best kernel radius you obtained in the writeup.\\[50pt]
+Complete the \texttt{compute\_best\_svm\_radius} by writing code to compute the best SVM radius which maximizes accuracy on the validation dataset.\\[50pt]
