--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \def\due{Monday, 7 September 2020}
-\def\zipscript{\texttt{zip -j ps4\_submission.zip mnist/src/nn.py spam/src/spam.py}}
+\def\zipscript{\texttt{zip -j ps4\_submission.zip src/mnist/nn.py src/spam/spam.py}}
 \def\zipscriptalt{\texttt{python zip\_submission.py}}
 \def\psetnum{4 }
 
@@ -12,9 +12,9 @@
 % BOTH THE PROBLEM SET AND ITS SOLUTIONS IN THE SAME LATEX FOLDER.  STUDENTS WILL NOT     %
 % GAIN ACCESS TO THESE "*-sol.tex" FILES UNTIL AFTER THE PROBLEM SET DUE DATE.  IF YOU    %
 % ARE RECEIVING ERRORS FROM YOUR LATEX COMPILER ABOUT THESE FILES MISSING, ENSURE THE     %
-% LINES IMMEDIATELY PRECEDING THIS STATEMENT IS EXACTLY AS FOLLOWS:                       %
+% LINE IMMEDIATELY PRECEDING THIS STATEMENT IS EXACTLY AS FOLLOWS:                       %
 %                                                                                         %
-%      \ifdefined\solutions {2} \else \def\solutions{1} \fi                               %
+%      \ifdefined\solutions {1} \else \def\solutions{2} \fi                               %
 %                                                                                         %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
