--- a/spam/01-input-processing.tex
+++ b/spam/01-input-processing.tex
@@ -1,5 +1,5 @@
 \item \subquestionpointscoding{5}
-Implement code for processing the the spam messages into numpy arrays that can be fed into machine learning models. Do this by completing the \texttt{get\_words}, \texttt{create\_dictionary}, and \texttt{transform\_text} functions within our provided \texttt{src/spam.py}. Do note the corresponding comments for each function for instructions on what specific processing is required.
+Implement code for processing the the spam messages into numpy arrays that can be fed into machine learning models. Do this by completing the \texttt{get\_words}, \texttt{create\_dictionary}, and \texttt{transform\_text} functions within our provided \texttt{src/spam/spam.py}. Do note the corresponding comments for each function for instructions on what specific processing is required.
 
 The provided code will then run your functions and save the resulting dictionary into \texttt{spam\_dictionary} and a sample of the resulting training matrix into\\
 \texttt{spam\_sample\_train\_matrix}.\\[50pt]
