pintaba una banda el set head

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\def\due{Monday, 7 September 2020}
+\def\due{Jueves, 8 Octubre 2020}
 \def\zipscript{\texttt{zip -j ps4\_submission.zip src/mnist/nn.py src/spam/spam.py}}
 \def\zipscriptalt{\texttt{python zip\_submission.py}}
 \def\psetnum{4 }
@@ -22,29 +22,16 @@
 
 \begin{document}
 
-\pagestyle{myheadings} \markboth{}{XCS229i Problem Set \psetnum}
+Machine Learning TP 2
 
-\ifnum\solutions=1{
-{\huge\noindent XCS229i Problem Set \psetnum (Solutions)}
-} \else {
-\huge\noindent XCS229i Problem Set \psetnum
-} \fi
+{\bf Entrega: {\due }.}
 
 \ruleskip
 
-{\bf Due {\due }.}
-
-\medskip
-
-\input{00-instructions/00-main}
 
 \begin{enumerate}[wide, labelwidth=!, labelindent=0pt]
 
-\clearpage
 \input{spam/00-main}
-
-\clearpage
-\input{mnist/00-main}
 
 \end{enumerate}
 
