--- a/spam/02-naive-bayes.tex
+++ b/spam/02-naive-bayes.tex
@@ -1,6 +1,6 @@
-\item \subquestionpointscoding{5}
+\item \subquestionpointscoding{25}
 In this question you are going to implement a Naive Bayes classifier for spam
-classification with {\bf multinomial event model} and Laplace smoothing.
+classification.
 
 Code your implementation by completing the \texttt{fit\_naive\_bayes\_model}
 and \\\texttt{predict\_from\_naive\_bayes\_model} functions in
@@ -11,7 +11,7 @@ compute your prediction accuracy and then save your resulting predictions
 to \texttt{spam\_naive\_bayes\_predictions}.
 
 
-{\bf Remark.} If you implement Naive Bayes the straightforward way, you will find
+{\bf Remark. (OPTIONAL!)} If you implement Naive Bayes the straightforward way, you will find
 that the computed $p(x|y) = \prod_i p(x_i | y)$ often equals zero.  This is
 because $p(x|y)$, which is the product of many numbers less than one, is a very
 small  number. The standard computer representation of real numbers cannot
